# AutoTradePlatform

./: .gitignore  README.md  Usage.md  install.bat  pyproject.toml
src/config/backtest/: test.cfg
src/config/order/: exit.cfg  test.cfg  test2.cfg
src/sj_trading/: .gitignore  main.py
src/sj_trading/BackTest/: BackTester.py  Observer.py  main.py
src/sj_trading/Event/: Handler.py  io.py
src/sj_trading/Order/: Manager.py  Order.py  OrderDealReport.py
src/sj_trading/Quote/: Publisher.py  QuoteReceiver.py  QuoteType.py  Receiver.py  __init__.py  data.py  main.py
src/sj_trading/Report/: Report.py  main.py
src/sj_trading/Strategy/: BaseStrategy.py  __init__.py  main.py
src/sj_trading/Utils/: Config.py  Constant.py  Contract.py  Futures.py  Indicators.py  Kbar.py  Order.py  Plot.py  Quote.py  Strategy.py  __init__.py  log.py  logger.py
